<resources>
    <string name="app_name">Plantify</string>
    <string name="your_home">Your home.</string>
    <string name="enjoy_the_experience">Enjoy the experience.</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="browse">Browse</string>
    <string name="products">Products</string>
    <string name="inspirations">Inspirations</string>
    <string name="shops">Shops</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
