<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".ui.Dashboard">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:onClick="goBack"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sfuitext_bold"
        android:text="@string/browse"
        android:textColor="@color/textColorDark"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_user_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <LinearLayout
        android:id="@+id/fragmentsLable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/productsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/products"
            android:fontFamily="@font/sfuitext_medium"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:layout_marginEnd="33dp"
            android:background="@drawable/fragment_label_background"
            />
        <TextView
            android:id="@+id/inspirationsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="33dp"
            android:paddingBottom="10dp"
            android:text="@string/inspirations"
            android:fontFamily="@font/sfuitext_medium"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/shopsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shops"
            android:paddingBottom="10dp"
            android:fontFamily="@font/sfuitext_medium"
            android:textSize="16sp"
            android:textAlignment="center"
            />


    </LinearLayout>

    <View
        android:id="@+id/underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/textColorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentsLable" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/content_slider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline" />

</androidx.constraintlayout.widget.ConstraintLayout>